@@ -1,5 +1,13 @@
 2005-10-18  Wim Taymans  <wim@fluendo.com>
 
+	* gst/gstbin.c: (gst_bin_class_init), (gst_bin_get_state_func),
+	(gst_bin_recalc_func):
+	* gst/gstelement.c: (gst_element_set_clock),
+	(gst_element_abort_state), (gst_element_lost_state):
+	Cleanups, prepare for state change fixes.
+
+2005-10-18  Wim Taymans  <wim@fluendo.com>
+
 	* gst/gstbin.h:
 	* gst/gstelement.c: (gst_element_class_init),
 	(gst_element_set_state), (gst_element_set_state_func):
